2003-12-19  David Malcolm <david@davemalcolm.demon.co.uk>

	* xmldata.c

	Fix for bug #125720 (crash on deleting nothing)

	* xmldata.c

	Fix for bug #124508 (crash on inserting sibling)

	* cong-editor-area-composer.c, cong-editor-area-composer.h, cong-editor-area-entity-decl.c, cong-editor-area-entity-ref.c, cong-editor-area-flow-holder-blocks.c, cong-editor-area-flow-holder-inlines.c, cong-editor-area-labelled.c, cong-editor-area-line.c, cong-editor-area-structural.c

	Fix for bug #125918 (Elements appearing in incorrect order)

	* cong-node.c

	Added some bulletproofing to the ordering routine

	* cong-editor-node-text.c

	Fixed various bugs in the calculation of selection highlighting (including bug #124130); added an early reject to throw away unnecessary updates when dragging out a selection with the mouse

	* cong-node.h, cong-node.c, cong-range.c

	Added ordering function for comparing nodes; fixed long-standing bug in CongRange reordering function which was causing glitches in the selection code

	* cong-location.c

	Fixed bug when moving cursor to next word near end of a node's content which would generate an invalid cursor location off-by-one beyond the valid range

2003-12-18  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-xpath-expression.c

	Fixed a missing prototype

	* cong-editor-node-element-span.c

	Fixed warnings

	* cong-node.c

	Fixed crash when testing text nodes as being irrelevant whitespace in the case where they haven't yet been added to the tree

	* cong-editor-node-text.c

	Support for middle mouse button paste of PRIMARY
	
	--- Version 0.7.8 ---

2003-12-17  David Malcolm <david@davemalcolm.demon.co.uk>

	* plugin-sgml.c

	Warning fixes, and a fix for a stupid parameter mismatch bug that would have caused 100% repeatable crashes if anyone ran this plugin.  Looks like no-one does, I guess...

	* cong-error-dialog.c, cong-modification-set-dtd-ptr.c, global.h, xmledit.c

	Fix more warnings

	* cong-location.c
