@@ -1,3 +1,9 @@
+2003-12-20  David Malcolm <david@davemalcolm.demon.co.uk>
+
+	* cong-document.c
+
+	Implemented various missing node types in cong_document_get_node_name, fixing a problem in the test data for bug #120976
+
 2003-12-19  David Malcolm <david@davemalcolm.demon.co.uk>
 
 	* xmldata.c
